--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
@@ -131,7 +131,7 @@ setwd(paste0(main.path)) ## Yeni çalışma klasörü (yani working directory) b
     + Statik Modeller
     + Sonlu Dağıtılmış Gecikme Modelleri (Finite Distributed Lag Models) - FDL Modelleri
 - Bu modellerin uygulaması için [`wooldridge`](https://cran.r-project.org/web/packages/wooldridge/index.html) R paketinden direkt olarak veri indirip yüklemeye çalışalım.
-    + `wooldridge` R paketindeki verileri incelemek için [wooldridge CRAN klavuzunu](https://cran.r-project.org/web/packages/wooldridge/wooldridge.pdf) inceleyebilirsiniz.
+    + `wooldridge` R paketindeki verileri incelemek için [wooldridge CRAN klavuzuna](https://cran.r-project.org/web/packages/wooldridge/wooldridge.pdf) bakabilirsiniz.
     + Bu verilerin daha detaylı bir gösterimi ve uygulama için ise [bu linke](https://justinmshea.github.io/wooldridge/index.html) bakabilirsiniz.
 - `wooldridge` R paketinde mevcut olan veriyi, verinin ismini kullanarak yüklemek için 1 fonksiyon kullanacağız: `data`.
     + `data` fonksiyonu ile istediğimiz veriyi verinin R paketi içindeki ismini kullanarak direkt olarak R'ın içine yükleyebiliriz.
@@ -155,9 +155,9 @@ setwd(paste0(main.path)) ## Yeni çalışma klasörü (yani working directory) b
     + cinf ($\Delta{inf_{t}} = inf_{t} - inf_{t-1}$): ilk farklar enflasyon oranı
     + cunem ($\Delta{unem_{t}} = unem_{t} - unem_{t-1}$): ilk farklar işsizlik oranı
 - Daha sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
-- Son olarak yüklediğimiz veriyi kullanarak aşağıdaki modelleri tahmin edelim.
-    + Model 1: $inf_{t} = \beta_{0} + \beta_{1}unem_{t} + u_{t}$
-    + Model 2: $\Delta{inf_{t}} = \beta_{0} + \beta_{1}\Delta{unem_{t}} + u_{t}$
+- Son olarak yüklediğimiz veriyi kullanarak aşağıdaki statik modelleri tahmin edelim.
+    + Model 1 (Statik): $inf_{t} = \beta_{0} + \beta_{1}unem_{t} + u_{t}$
+    + Model 2 (Statik): $\Delta{inf_{t}} = \beta_{0} + \beta_{1}\Delta{unem_{t}} + u_{t}$
 ```{r Static.Models.SLR}
 data(phillips) ## Datayı yüklüyoruz.
 ?phillips ## Datanın metadatası.
@@ -213,8 +213,8 @@ summary(model) ## Tahmin özeti.
     + inf ($inf_{t}$): cari dönem enflasyon oranı
     + unem ($unem_{t}$): cari dönem işsizlik oranı
     + unem_1 ($unem_{t-1}$): 1. gecikme işsizlik oranı
-- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki modeli tahmin edelim.
-    + Model: $inf_{t} = \alpha_{0} + \delta_{0}unem_{t} + \delta_{1}unem_{t-1} + u_{t}$
+- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki FDL$_{(1)}$ modelini tahmin edelim.
+    + Model (FDL$_{(1)}$): $inf_{t} = \alpha_{0} + \delta_{0}unem_{t} + \delta_{1}unem_{t-1} + u_{t}$
 - Son olarak model tahminini kullanarak etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
     + Etki çarpanı: $\delta_{0}$
     + Uzun dönem çarpanı: $\delta_{0} + \delta_{1}$
@@ -241,16 +241,15 @@ coef(model)[[2]] + coef(model)[[3]]
 
 ### FDL$_{(2)}$ {#FDL.Models.2}
 - Örnek olarak, `wooldridge` R paketinden `fertil3` verisini yükleyelim.
-- `fertil3` verisi genel olarak Amerika'daki **vergi muafiyeti ve doğurganlık oranı** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor. Örneğimizi basitleştirmek için biz sadece bazı değişkenleri kullanacağız.
+- `fertil3` verisi genel olarak Amerika'daki **doğurganlık oranı ve vergi muafiyeti** değişkenlerini, ve ayrıca bu değişkenlere ait gecikme ve ilk farklar değerlerini içeriyor. Örneğimizi basitleştirmek için biz sadece bazı değişkenleri kullanacağız.
     + gfr ($gfr_{t}$): doğurganlık oranı (doğurganlık yaşındaki 1000 kadına düşen bebek sayısı)
     + pe ($pe_{t}$): çocuk sahibi olmayı özendirmek için getirilen vergi muafiyeti ($)
-    + ww2 ($ww2_{t}$): 2. Dünya Savaşı yıllarını belirten kukla değişken (1941-1945 yılları için 1 diğer yıllar için 0)
+    + ww2 ($ww2_{t}$): II. Dünya Savaşı yıllarını belirten kukla değişken (1941-1945 yılları için 1 diğer yıllar için 0)
     + pill ($pill_{t}$): doğum kontrol hapı kullanımının yasal olduğu yılları belirten kukla değişken (1963 ve sonrası için 1 diğer yıllar için 0)
 - Sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
-
-- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki modelleri tahmin edelim.
-    + Model 1: $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + u_{t}$
-    + Model 2: $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + \beta_{1}ww2_{t} + \beta_{2}pill_{t} + u_{t}$
+- Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki FDL$_{(2)}$ modellerini tahmin edelim.
+    + Model 1 (FDL$_{(2)}$): $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + u_{t}$
+    + Model 2 (FDL$_{(2)}$): $gfr_{t} = \alpha_{0} + \delta_{0}pe_{t} + \delta_{1}pe_{t-1} + \delta_{2}pe_{t-2} + \beta_{1}ww2_{t} + \beta_{2}pill_{t} + u_{t}$
 - Son olarak model tahminlerini kullanarak her model için etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
     + Model 1'de denklemin sağ tarafında tek bir bağımsız değişken ve ona ait gecikme değerleri vardır.
         * Etki çarpanı: $\delta_{0}$
@@ -267,7 +266,7 @@ str(data) ## Datanın yapısını inceleyelim.
 data ## Datanın yapısını inceleyelim.
 data.ts <- ts(data, start = 1913) ## Data 1913 yılından itibaren başlamış.
 
-# Model 1: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
+# Model 1: Doğurganlık ve vergi muafiyeti arasındaki FDL(2) modeli.
 model.1 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2), singular.ok = FALSE)
 summary(model.1) ## Tahmin özeti.
 
@@ -280,7 +279,7 @@ coef(model.1)[[2]]
 # Model 1: Uzun dönem çarpanının hesaplanması.
 coef(model.1)[[2]] + coef(model.1)[[3]] + coef(model.1)[[4]]
 
-# Model 2: Vergi muafiyeti ve doğurganlık arasındaki 2. dereceden FDL modeli.
+# Model 2: Doğurganlık, vergi muafiyeti, savaş ve doğurganlık hapı arasındaki FDL(2) modeli.
 model.2 <- dynlm(data = data.ts, formula = gfr ~ pe + L(pe, 1) + L(pe, 2) + ww2 + pill, singular.ok = FALSE)
 summary(model.2) ## Tahmin özeti.
 
